A wee bit o' clean up

--- a/GettingStartedWithKendoUI/Part2_ListView/GettingStartedWithKendoUI.Web/Views/Home/Index.cshtml
+++ b/GettingStartedWithKendoUI/Part2_ListView/GettingStartedWithKendoUI.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Getting Started With KendoUI";
+    ViewBag.Title = "Getting Started With KendoUI - List View";
 }
 
 <script type="text/javascript">
