--- a/GettingStartedWithKendoUI/Part1_InstallationAndConfiguration/GettingStartedWithKendoUI.Web/Views/Home/Index.cshtml
+++ b/GettingStartedWithKendoUI/Part1_InstallationAndConfiguration/GettingStartedWithKendoUI.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Getting Started With KendoUI";
+    ViewBag.Title = "Getting Started With KendoUI - Installation and Configuration";
 }
 
 <script type="text/javascript">
