Updated Index in Part2

--- a/GettingStartedWithKendoUI/Part2_AutoComplete/Part2_AutoComplete.Web/Views/Home/Index.cshtml
+++ b/GettingStartedWithKendoUI/Part2_AutoComplete/Part2_AutoComplete.Web/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
         $("#Name").kendoAutoComplete({
             minLength: 1,
             dataTextField: "Name",
-            dataValueField: "Id",
             suggest: true,
+            filter: "startswith",
             dataSource: { serverFiltering: true,  transport: {read: {url: "/Home/GetManufacturers/",dataType: "json", type: "POST"}}}
         });
     });
